# spotitui

./: Cargo.toml  README.md
src/: app.rs  main.rs  spotify.rs  ui.rs
