[package]
name = "spotitui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
url = "2.4"
rand = "0.9"
sha2 = "0.10"
webbrowser = "1.0"
anyhow = "1.0"
urlencoding = "2.1"
ctrlc = "3.4"
